css/styles.css
body {
    font-family: 'Lato', sans-serif;
}

/*Nav*/

nav {
    margin-bottom: 0 !important;
}

.navbar-default {
    background-color: rgba(255, 255, 255, 0.5);
}

.nav-tabs li span {
    display: block;
    text-align: center;
    font-size: 30px;
    color: rgba(194, 47, 47,1);
    margin: .5em 0;
}

.nav-tabs>li>a {
    font-size: 16px;
    font-weight: 700;
    color: rgba(194, 47, 47,1) !important;

}

.nav-tabs>li>a:hover,
.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover{
    border-bottom: 3px solid rgba(194, 47, 47,1);
    transition: border-bottom ease .3s;

}

.nav-tabs>li>a,
.nav-tabs>li>a:hover,
.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover {
    border-top: 0px solid #ddd;
    border-left: 0px solid #ddd;
    border-right: 0px solid #ddd;
    background-color: #fff;

}


/*Main Section*/

.main {
    background-image: url("http://placehold.it/500x992");
    min-height: 500px;
}

.content {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 500px;
}

.main .cta {
    margin: 1em auto;
}

.main {
    color: #fff;
}

.main h1 {
    font-family: 'Lora', serif;
    letter-spacing: .1em;
    font-weight: 400;
    padding: .25em 0;
}

/*Intro Section*/
.intro {
    padding: 1em 0;
}

.intro h3 {
    color: #FFF;
}

.intro p {
    color: rgba(255,255,255,0.9)
}


/*Services Section*/

.services {
    background-color: #F8F8F8;
}

.services .row {
    max-width: 992px;
    margin: 3em auto;
}

.intro {
    background-color: #000;
}

.services-box {
    background-color: #FFF;
    max-width: 400px;
    margin: 0 auto;
    padding: 0 0 3em;
}

.img-center, .paragraph-center, .services h2{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.paragraph-center {
    max-width: 400px;
    padding: 1em 1em 0;
}

.cta {
    background-color: rgba(194, 47, 47,1);
    color: #FFF;
    padding: 1em 1.5em;
    border: 0px solid #fff!important;
    margin: 1em 0 .5em;
}

.cta:hover {
    background-color: rgba(194, 47, 47,.95);
    color: #FFF;
    border: 0px solid #fff !important;
}

.cta span {
    margin-right: .5em;
}

.services h2 {
    font-size: 24px;
    font-weight: 700;
    max-width: 400px;
    color: rgba(194, 47, 47,1);
    padding: 1em 0 0.5em;
}

/*Demarches Section*/

.demarches {
    margin: 4em 0 5em;
}

#myTab.nav-tabs {
    border-bottom: 3px solid transparent;
}

ul#myTab {
    display: flex;
    justify-content: center;
    margin-bottom: 4em !important;
}

#myTabContent p,
#myTabContent h5 {
    max-width: 992px;
    margin: 1em auto;
}

#myTabContent h5 {
    font-size: 16px;
    font-weight: 700;
}

/*Responsive Demarches Section*/

.panel-default>.panel-heading {
    background-color: #FFF;
}

a.js-tabcollapse-panel-heading {
    text-decoration: none;
    color: rgba(194, 47, 47,1);
}

#myTab-accordion .panel-default {
    border-color: rgba(194, 47, 47,1);
}


/*Breather section*/

.breather {
    background-image: url("http://placehold.it/400x992");
    padding: 8em 0;
}

.breather h3 {
    display: flex;
    justify-content: center;
}

.breather h3, .breather h4 {
    color: #fff;
}

/*FAQ section*/
.faq {
    padding: 4em 1em;
}

.toggle-title,
a.tel-link {
    color: rgba(194, 47, 47,1);
    font-weight: 700;
}

.toggle-title {
    font-size: 18px;
    display: block;
    margin: 2em 0;
}

.toggle-title:hover,
.toggle-title:focus,
a.tel-link {
    color: rgba(194, 47, 47,.9);
    text-decoration: none;
}

/*Infos Section*/
.infos h4 {
    color: rgba(194, 47, 47,1);
    margin: 20px 0;
    line-height: 28px;
}


/*Widget Section*/

.widget {
    background-color: rgb(51, 51, 51);
    padding: 4em 0;
}

.widget h4 {
    color: #fff;
    margin: 1.25em 0;
    line-height: 26px;
}


.widget p, .widget li {
    color: rgb(204, 204, 204);
    line-height: 18px;
}

.widget ul {
    list-style-type: none;
    padding-left: 0;
}

.widget ul li,
.widget p:first-of-type{
    line-height: 36px;
}

form input, form textarea {
    border: 1px solid rgba(255, 255, 255, 0.8) !important;
    border-radius: 0px !important;
    background-color: rgba(235, 235, 235, 0) !important;
}

form input {
    height: 50px !important;
}

form textarea {
    height: 100px !important;
}

form button {
    border: 2px solid rgb(221, 221, 221);
    border-radius: 0px !important;
    background-color: rgba(255, 255, 255, 0.98);
    font-size: 16px !important;
    height: 50px;
    color: rgb(194, 47, 47);
    font-weight: 700 !important;
    transition:  all 0.3s ease 0s;
}

form button:hover {
    background-color: rgb(194, 47, 47);
    color: #fff !important;
    border: 2px solid rgb(194,47,47)
}

/*Footer*/

footer {
    background-color: rgb(26, 26, 26);
    min-height: 100px;
}

footer p {
    padding: 2.5em 0;
    color: rgba(255,255,255,1)
}

.social {
    text-align: right;
    padding: 1.5em 0;
}

.social a {
    color: #fff;
    font-size: 24px;
    width: 50px;
    height: auto;
    text-align: center;
    display: inline-block;
    border: 1px solid #fff;
    border-radius: 50%;
    line-height: 50px;
}

@media (max-width:768px) {
    .demarches .container {
        margin: 3em;
    }

    .breather h3 {
        padding-bottom: 1em;
    }
}

@media (min-width:769px) {
    .breather h3 {
        padding-top: 2.5em;
    }
}

